# data-lab

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml  requirements.txt
blocks/ReadFile/: __init__.py  block.oo.yaml
blocks/ReadFile/oo-render/: package.json  pnpm-lock.yaml
blocks/ReadFile/oo-render/dev/: dev.main.tsx
blocks/ReadFile/oo-render/src/: App.module.css  App.tsx  render.tsx
flows/flow-2/: .flow.ui.oo.json
flows/test/: .flow.ui.oo.json  flow.oo.yaml
flows/test/scriptlets/: +python#1.py
flows/test1/: .flow.ui.oo.json  flow.oo.yaml
flows/test1/scriptlets/: +typescript#1.ts
flows/test2/: .flow.ui.oo.json  flow.oo.yaml
tasks/bar_chart/: main.py  task.oo.yaml
tasks/column_date_filter/: __init__.py  task.oo.yaml
tasks/column_number_filter/: __init__.py  task.oo.yaml
tasks/column_number_sort/: __init__.py  task.oo.yaml
tasks/csv_to_df/: __init__.py  task.oo.yaml
tasks/dasdasdw/: task.oo.yaml
tasks/delete _column_by_name/: __init__.py  task.oo.yaml
tasks/delete_column_by_name/: __init__.py  task.oo.yaml
tasks/df-to-excel/: __init__.py  task.oo.yaml
tasks/df_preview/: __init__.py  task.oo.yaml
tasks/df_to_csv/: __init__.py  task.oo.yaml
tasks/excel_to_df/: __init__.py  task.oo.yaml
tasks/line_chart/: __init__.py  task.oo.yaml
tasks/pie_chart/: __init__.py  task.oo.yaml
tasks/stacked_area_chart/: __init__.py  task.oo.yaml
