[project]
name = "workspace"
version = "0.0.8"
description = ""
authors = [
    {name = "shaun",email = "beingswu@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
